fix: add missing padding

--- a/front/src/app/layouts/nav-layout/nav-layout.component.css
+++ b/front/src/app/layouts/nav-layout/nav-layout.component.css
@@ -1,4 +1,5 @@
 main {
   margin: 7rem auto 0;
+  padding: 2rem;
   max-width: 1200px;
 }
